--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <span class="title"></span>
                 <button>x</button>
             </div>
-            <span>11:22</span>
+            <span></span>
         </div>
     </div>
 <!-- 
@@ -87,8 +87,8 @@
       </div>
 
      -->
-
-    <script src="./index.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.5/axios.js"></script>
+     <script src="./index.js"></script>
 </body>
 
 </html>
